<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="cd_search">cd_search</string>
    <string name="cd_favorite">cd_favorite</string>
    <string name="cd_overflow">cd_overflow</string>
    <string name="settings">settings</string>
    <string name="eqalizer">eqalizer</string>
    <string name="shuffle_all">shuffle_all</string>
    <string name="apollo_playlists">PLAYLISTS</string>
    <string name="apollo_recent">RECENT</string>
    <string name="apollo_artists">ARTISTS</string>
    <string name="apollo_albums">ALBUM</string>
    <string name="apollo_songs">SONGS</string>
    <string name="apollo_genres">GENRES</string>
    <string name="singer">SINGER</string>
    <string name="song_name">SONGNAME</string>
    <string name="album_num">AlbumNum</string>
    <string name="unknown_artist">unknown</string>
    <string name="artist">artist</string>
    <string name="time_start">00:00</string>
    <string name="time_end">04:00</string>
</resources>