<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song_play_activity"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:divider="?android:listDivider"
    android:dividerPadding="12dip"
    android:orientation="vertical"
    android:showDividers="beginning" >

    <ImageView
        android:id="@+id/top_bar"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#0099CC"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/song_name"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:text="@string/singer"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/switch_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="fitEnd"
            android:src="@drawable/btn_switch_queue"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:src="@drawable/default_artwork"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_start"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/time_line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#0099CC"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/time_end"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/btn_playback_shuffle"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/lastButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="38dp"
            android:layout_toRightOf="@+id/shuffle"
            android:background="@drawable/btn_playback_previous"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_playback_play"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="38dp"
            android:layout_toLeftOf="@+id/repeat_one"
            android:background="@drawable/btn_playback_next"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/repeat_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/btn_playback_repeat"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

</LinearLayout>